--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@react-google-maps/api": "^2.7.0",
+    "@stripe/react-stripe-js": "^2.9.0",
+    "@stripe/stripe-js": "^4.10.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "avatar": "^0.1.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
+    "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "framer-motion": "^6",
+    "lucide-react": "^0.460.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
